Change CSS for user input - cards are aligned correctly now

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -108,7 +108,7 @@ background-size: cover;
 	font-size: 25px;
 }
 
-.card-wrapper {
+.form-wrapper {
 	// border: 2px solid yellow;
 	display: flex;
 	flex-direction: row;
@@ -143,9 +143,9 @@ background-size: cover;
 
 }
 
-.destinations-card {
-	border: 2px solid pink;
-}
+// .destinations-card {
+// 	border: 2px solid pink;
+// }
 
 .traveler-form {
 	display: flex;
